<resources>
    <string name="app_name">AND_1</string>
    <string name="textview">TextView</string>
    <string name="log_in">LOG IN</string>
    <string name="email">Email:</string>
    <string name="back">BACK</string>
    <string name="password">Password:</string>
    <string name="register">REGISTER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome_to_quizup">Welcome to QuizUp</string>
    <string name="log_in2">Log In</string>
    <string name="register2">Register</string>
    <string name="todo">TODO</string>
    <string name="quizup">QuizUp</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="topics">Topics</string>
    <string name="log_in_or_create_account">LOG IN or Create Account</string>
    <string name="score">Score:</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="value">Value</string>
    <string name="highscore">Highscore</string>
    <string name="add">add</string>
    <string name="enter_item">Enter Item</string>
    <string name="make_a_list">Make A List</string>
    <string name="grocery_list">Grocery List</string>
    <string name="recipes">Recipes</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location:</string>
    <string name="_0_0">0.0</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="log_in_register">LOG IN / REGISTER</string>
</resources>
